Bug 1146637 - Set correct picture size on Gonk. r=jib

--HG--
extra : rebase_source : f2566ebe2a7c562fb2e9cab72475759a08faee5d